First working version

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+input {
+  margin-left: 3px;
+  width: 120px;
+}
+
+select {
+  margin-left: 3px;
+  width: 130px;
+}
+
+label {
+  width: 70px;
+  display: inline-block;
+}
+
+.fadeOut {
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.fadeIn {
+  opacity: 1.0;
+  transition: opacity 0.3s;
 }
